--- a/Final version - without sound/boundedsimplex.css
+++ b/Final version - without sound/boundedsimplex.css
@@ -11,13 +11,6 @@ direction: ltr;
         border: none;
         text-align: center;
       }
-.fixbutton {
-        background-color: #00f6ff;
-        padding: 0px 7.5px;
-	width:100;
-        border: none;
-        text-align: center;
-      }
   @keyframes glowing {
         0% {
           background-color: #49e819;
@@ -35,9 +28,7 @@ direction: ltr;
       .varbutton {
         animation: glowing 600ms infinite;
       }
-      .fixbutton {
-        animation: glowing 600ms infinite;
-      }
+      
 header {
         text-align:center;
 }
@@ -73,6 +64,19 @@ border-bottom: 1px solid black;
 	background-color: #cce4ff;
         padding: 0px 7.5px;
 	width:30;
+}
+.correct{
+text-align:center;
+	background-color:#49e819;
+        //padding: 0px 7.5px;
+	//width:30;
+}
+.wrong{
+text-align:center;
+	background-color: #ee2d17;
+        //padding: 0px 7.5px;
+	//width:30;
+
 }
 
 
